--- a/src/components/character/views/components/editPair.css
+++ b/src/components/character/views/components/editPair.css
@@ -7,11 +7,13 @@
 }
 
 .titleInput {
+    padding: 0 4px;
     width: 75%;
     position: unset !important;
 }
 
 .valueInput {
+    padding: 0 4px;
     position: unset !important;
     text-align: right;
     width: 25%;
