--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -447,6 +447,101 @@ input.excurrentLocation {
     top: 250px;
 }
 
+.weaponsquare .attack {
+    position: absolute;
+    top: 17px;
+    left: 38px;
+    height: 22px;
+    width: 68px;
+    text-align: center;
+}
+.weaponsquare .recovery {
+    position: absolute;
+    top: 17px;
+    left: -17px;
+    height: 22px;
+    width: 68px;
+    text-align: center;
+}
+.weaponsquare .init {
+    position: absolute;
+    top: 17px;
+    left: 93px;
+    height: 22px;
+    width: 68px;
+    text-align: center;
+}
+.weaponsquare .def {
+    position: absolute;
+    top: 57px;
+    left: 0px;
+    height: 22px;
+    width: 68px;
+    text-align: center;
+}
+.weaponsquare .encumb {
+    position: absolute;
+    top: 57px;
+    left: 38px;
+    height: 22px;
+    width: 68px;
+    text-align: center;
+}
+.weaponsquare .drshell {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    position: absolute;
+    top: 52px;
+    left: 82px;
+    height: 29px;
+    width: 61px;
+    text-align: center;
+}
+
+#armorDr {
+    position: unset;
+    font-size: 10px;
+}
+
+#shieldDr {
+    position: unset;
+    font-size: 10px;
+}
+
+.weaponsquare .measure {
+    position: absolute;
+    top: 104px;
+    left: -17px;
+    height: 22px;
+    width: 68px;
+    text-align: center;
+}
+
+.weaponsquare .damage {
+    position: absolute;
+    top: 85px;
+    left: 38px;
+    height: 38px;
+    width: 69px;
+    word-wrap: break-word;
+    text-align: center;
+    font-size: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.weaponsquare .parry {
+    position: absolute;
+    top: 104px;
+    left: 92px;
+    height: 22px;
+    width: 68px;
+    text-align: center;
+}
+
+
 .takingabreatherLocation {
     top: 437px;
     left: 546px;
