editing priviliages are now based on ownership

--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -86,6 +86,10 @@ input[type=number] {
     right: 5px
 }
 
+.displayNone {
+    display: none;
+}
+
 .editButton {
     position: sticky;
     bottom: 10px;
