--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,7 +1,16 @@
 .homeShell {
     margin: 30px;
+}
+
+.homeShell .characterShell:first-child {
+    margin-bottom: 15px;
+}
+
+.characterShell {
     padding: 30px;
     background-color: white;
+    -webkit-box-shadow: 5px 5px 15px 5px #000000;
+    box-shadow: 5px 5px 15px 5px #000000;
 }
 
 .character {
