--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -55,13 +55,17 @@
     color: whitesmoke;
 }
 
-#overlay {
+.overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: #00000075;
+}
+
+.displayNone {
+    display: none;
 }
 
 .modelBody {
